--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "cSpell.words": [
+    "asegurate",
+    "deshipotecarla",
+    "DONT",
+    "gestion",
+    "liquidacion",
+    "operacion",
     "whotel"
   ]
 }
