--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,12 @@
     "DONT",
     "gestion",
     "getw",
+    "Informacion",
     "liquidacion",
     "opcion",
     "operacion",
     "Seleccion",
+    "Transaccion",
     "vacio",
     "whotel"
   ]
