--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,23 @@
 {
   "cSpell.words": [
     "asegurate",
+    "BENVIDO",
+    "BENVINGUT",
+    "Català",
+    "catalan",
     "codigo",
     "deshipotecarla",
     "DONT",
+    "Edició",
+    "ETORRI",
+    "Euskara",
+    "Galego",
+    "galician",
     "gestion",
     "getw",
     "Informacion",
     "liquidacion",
+    "ONGI",
     "opcion",
     "operacion",
     "Seleccion",
